# static-file-server

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs
src/cli/: args.rs
src/server/: mod.rs  routes.rs
src/startup/: server.rs
src/terminal/: print.rs
tests/api/: helpers.rs
tests/dir1/: index.html
