[package]
name = "static-file-server"
authors = ["Ohad Dahan <ohaddahan@gmail.com>"]
version = "0.0.2"
edition = "2021"
repository = "https://github.com/ohaddahan/static-file-server"
description = "A simple static file server"
documentation = "https://docs.rs/crate/static-file-server"
license = "MIT"

[dependencies]
axum = { version = "0.7.2" }
axum-extra = { version = "0.9.0" }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.4.11", features = ["derive"] }
termcolor = { version = "1.4.0" }
anyhow = { version = "1.0.75" }